vortex-btrblocks/tests/snapshots/golden__regular__binary_low_cardinality.snap
---
source: vortex-btrblocks/tests/golden.rs
expression: rendered
---
input: binary, len=16384, nbytes=315856
root: vortex.dict(binary, len=16384) nbytes=6198
  metadata: all_values_referenced: true
  codes: fastlanes.bitpacked(u8, len=16384) nbytes=6146
    metadata: bit_width: 3, offset: 0
    width_table: vortex.constant(u8, len=16) nbytes=2
      metadata: scalar: 3u8
  values: vortex.varbin(binary, len=5) nbytes=52
    metadata: 
    offsets: vortex.primitive(u8, len=6) nbytes=6
      metadata: ptype: u8
