vortex-btrblocks/tests/snapshots/golden__regular__float_low_cardinality.snap
---
source: vortex-btrblocks/tests/golden.rs
expression: rendered
---
input: f64, len=16384, nbytes=131072
root: vortex.alp(f64, len=16384) nbytes=6208
  metadata: exponents: e: 16, f: 11
  encoded: vortex.dict(i64, len=16384) nbytes=6208
    metadata: all_values_referenced: true
    codes: fastlanes.bitpacked.v2(u8, len=16384) nbytes=6144
      metadata: bit_width: 3, offset: 0
    values: vortex.primitive(i64, len=8) nbytes=64
      metadata: ptype: i64
