vortex-btrblocks/tests/snapshots/golden__regular__int_arithmetic_sequence.snap
---
source: vortex-btrblocks/tests/golden.rs
expression: rendered
---
input: i64, len=16384, nbytes=131072
root: vortex.sequence(i64, len=16384) nbytes=0
  metadata: base: 10000i64, multiplier: 7i64
