vortex-btrblocks/tests/snapshots/golden__regular__int_monotone_jitter.snap
---
source: vortex-btrblocks/tests/golden.rs
expression: rendered
---
input: u64, len=16384, nbytes=131072
root: fastlanes.for.v2(u64, len=16384) nbytes=49152
  metadata: global_reference: 1700000001036u64
  encoded: fastlanes.bitpacked(u64, len=16384) nbytes=49152
    metadata: bit_width: 24, offset: 0
