vortex-btrblocks/tests/snapshots/golden__regular__int_monotone_jitter_nullable.snap
---
source: vortex-btrblocks/tests/golden.rs
expression: rendered
---
input: u64?, len=16384, nbytes=133120
root: fastlanes.for.v2(u64?, len=16384) nbytes=51207
  metadata: offset: 0
  encoded: fastlanes.bitpacked.v2(u64?, len=16384) nbytes=51200
    metadata: bit_width: 24, offset: 0
    validity_child: vortex.bool(bool, len=16384) nbytes=2048
      metadata: offset: 0
  references: vortex.constant(u64, len=16) nbytes=7
    metadata: scalar: 1700000001036u64
