vortex-btrblocks/tests/snapshots/golden__regular__int_negatives.snap
---
source: vortex-btrblocks/tests/golden.rs
expression: rendered
---
input: i64, len=16384, nbytes=131072
root: fastlanes.for.v2(i64, len=16384) nbytes=16384
  metadata: global_reference: -128i64
  encoded: fastlanes.bitpacked(i64, len=16384) nbytes=16384
    metadata: bit_width: 8, offset: 0
